src/golden/objects/typeerrors/test.golden/objects.fl
	object ObjA
		ctor make
		
	object ObjB
		ctor make